# DataScience

./: .gitignore  README.md  archivio_codici.py
carlo/: elettricità.ipynb
data/processed/: dataset_EDA_processed.csv  dataset_binary_class_processed.csv  dataset_daily_class_processed.csv  dataset_day_O3_processed.csv  dataset_day_PM10_processed.csv  dataset_day_PM2_5_processed.csv  dataset_day_class_processed.csv  dataset_five_class_processed.csv  dataset_hour_O3_processed.csv  dataset_hour_PM10_processed.csv  dataset_hour_PM2_5_processed.csv  dataset_multiclass_processed.csv
data/raw/: ondata_confini_amministrativi_api_v2_it_20111009_unita-territoriali-sovracomunali_22_comuni.geo.json  ondata_confini_amministrativi_api_v2_it_20120101_unita-territoriali-sovracomunali_22_comuni.geo.json
functions/: functions.py
functions/.ipynb_checkpoints/: EDA_funcs-checkpoint.py
notebooks/: 01_dataframe-organization.ipynb  01_dataframe_organization.ipynb  01_exploratory_data_analysis.ipynb  02_exploratory_data_analysis.ipynb  EDA.ipynb  RF_provvisorio.ipynb  main_progetto.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  Provvisorio_EDA-checkpoint.ipynb
notebooks/appendix/: 09_winds_appendix.ipynb
notebooks/classification/: 03_classification_preparation.ipynb  04_logistic_regression.ipynb  05_random_forest.ipynb  README.md  README_classification.md  (+1 more)
progetto_finale/: Makefile  README.md  environment.yml  pyproject.toml
progetto_finale/andrea_provvisorio/: Progetto.ipynb
src/: EDA_funcs.py  class_funcs.py  regr_funcs.py
temporary_andrea/: Progetto.ipynb
(+5 files in other folders)
