[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "progetto_finale"
version = "0.0.1"
description = "Questo \u00e8 il progetto finale per il corso di Data Science"
authors = [
  { name = "carlo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.13"


[tool.ruff]
line-length = 99
src = ["progetto_finale"]
include = ["pyproject.toml", "progetto_finale/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["progetto_finale"]
force-sort-within-sections = true

